# file-server

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  database.db
migrations/2024-03-12-062803_users/: up.sql
migrations/2024-03-12-080847_users/: up.sql
migrations/2024-03-12-172601_users/: up.sql
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  user.rs
