[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.57"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.35"
