[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
rusqlite = { version = "0.30", features = ["bundled"] }
